--- a/index.html
+++ b/index.html
@@ -12,12 +12,6 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="styles/main.css">
 
-<script type="text/javascript" src="Javascripts/jquery-1.11.3.min.js"></script><!--1stjQuery plugin-->
-<script src="Javascripts/Adipoli1/jquery.adipoli.js" type="text/javascript"></script><!--adipoli-->
-<script src="Javascripts/Adipoli1/jquery.adipoli.min.js" type="text/javascript"></script><!--adipoli-->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-<script type="text/javascript" src="Javascripts/main.js"></script><!--2ndcustom jQ-->
-
 </head>
 
 <body>
@@ -136,6 +130,12 @@
 		</div>
 	</div>
 
+<script type="text/javascript" src="Javascripts/jquery-1.11.3.min.js"></script><!--1stjQuery plugin-->
+<script src="Javascripts/UI/jquery-ui.min.js"></script>
+<script src="Javascripts/Adipoli1/jquery.adipoli.js" type="text/javascript"></script><!--adipoli-->
+<script src="Javascripts/Adipoli1/jquery.adipoli.min.js" type="text/javascript"></script><!--adipoli-->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+<script type="text/javascript" src="Javascripts/main.js"></script><!--2ndcustom jQ-->
 
 </body>
 </html>
