--- a/smoothies.html
+++ b/smoothies.html
@@ -7,7 +7,7 @@
 		<title>Smoothies</title>
 		<link href='https://fonts.googleapis.com/css?family=PT+Sans' rel='stylesheet' type='text/css'>
 		<link href='https://fonts.googleapis.com/css?family=PT+Sans:700' rel='stylesheet' type='text/css'>
-		<link rel="stylesheet" href="Javascripts/UI/jquery-ui-1.11.4.custom/jquery-ui.css">
+		<link rel="stylesheet" href="javascripts/UI/jquery-ui-1.11.4.custom/jquery-ui.css">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 		<link rel="stylesheet" href="styles/main.css">
@@ -96,11 +96,11 @@
 				</div>
 			</div>
 		</div>
-		<script type="text/javascript" src="Javascripts/jquery-1.11.3.min.js"></script><!--1stjQuery plugin-->
-		<script src="Javascripts/UI/jquery-ui.min.js"></script>
-		<script src="Javascripts/Adipoli1/jquery.adipoli.js" type="text/javascript"></script><!--adipoli-->
-		<script src="Javascripts/Adipoli1/jquery.adipoli.min.js" type="text/javascript"></script><!--adipoli-->
+		<script type="text/javascript" src="javascripts/jquery-1.11.3.min.js"></script><!--1stjQuery plugin-->
+		<script src="javascripts/UI/jquery-ui.min.js"></script>
+		<script src="javascripts/Adipoli1/jquery.adipoli.js" type="text/javascript"></script><!--adipoli-->
+		<script src="javascripts/Adipoli1/jquery.adipoli.min.js" type="text/javascript"></script><!--adipoli-->
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-		<script type="text/javascript" src="Javascripts/main.js"></script><!--2ndcustom jQ-->
+		<script type="text/javascript" src="javascripts/main.js"></script><!--2ndcustom jQ-->
 	</body>
 </html>
